# PyGFNxTB

./: README.md  pyproject.toml
.github/workflows/: pytest.yml  wheel.yml
pygfnxtb/: __init__.py
pygfnxtb/ase/: __init__.py  _base.py
pygfnxtb/cli/: __init__.py
pygfnxtb/exe/: __init__.py  help.txt  xcontrol.adoc
pygfnxtb/exe/darwin_arm64/: check_dylib.sh  libdftd4.3.dylib  libmctc-lib.0.dylib  libmulticharge.0.dylib  libs-dftd3.1.dylib
pyxtb/cli/: __init__.py
pyxtb/exe/: __init__.py
pyxtb/exe/darwin_arm64/: check_dylib.sh  libtblite.0.dylib  libtoml-f.0.dylib
tests/: test_ase_basic.py  test_ase_motion.py  test_ase_solvent.py  test_available.py  test_for_ase.py
