[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pygfnxtb"
version = "v0.0.1"
description = "Python wrapper for XTB Binary Executable File."
readme = "README.md"
authors = [
  {name = "Liu Gaoyong", email = "liugaoyong_88@163.com"},
  {name = "The xTB Developers", email = "xtb@thch.uni-bonn.de"},
]
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: Other Environment',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Natural Language :: English',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Software Development :: Libraries',
]
requires-python = ">=3.9, <=3.13"
dependencies = [
    "ase",
    "numpy",
    "typing-extensions",
]
[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "pytest>=8.3.5",
    "tblite; sys_platform != 'win32'",
]
[project.scripts]
xtb = "pygfnxtb.cli:main"
[project.urls]
homepage = "https://github.com/LiuGaoyong/PyGFNxTB"
repository = "https://github.com/LiuGaoyong/PyGFNxTB"
xtb_repository = "https://github.com/grimme-lab/xtb"
xtb_homepage = "https://xtb-docs.readthedocs.io/"

# setuptools config
[tool.setuptools.packages.find]
where = ["."]
include = ["pygfnxtb"]
namespaces = true
[tool.setuptools.package-data]
mypkg = ["*.dylib", "*.so", "*.dll", "*.exe", "*.txt"]

# uv config
[tool.uv]
package = true
[tool.uv.sources]
torch = { index = "torch-cpu" }
[[tool.uv.index]]
url = "https://mirror.nju.edu.cn/pypi/web/simple"
default = true
[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
name = "torch-cpu"
explicit = true

# pytest config
[tool.pytest.ini_options]
addopts = '--maxfail=1 -rf' # exit after 1 failures, report fail info
testpaths = ["tests"]
filterwarnings = [
    "error", # All other warnings are transformed into errors.
    # ignore the following warnings that matching a regex
    'ignore:invalid escape sequence:SyntaxWarning',
    'ignore:module \Ssre_parse\S is deprecated:DeprecationWarning',
    'ignore:module \Ssre_constants\S is deprecated:DeprecationWarning',
    'ignore:Please use atoms.calc:DeprecationWarning',
    'ignore::pytest.PytestUnraisableExceptionWarning',
    'ignore::pytest.PytestDeprecationWarning',
    'ignore:distutils:DeprecationWarning',
    'ignore:joblib \S use of fork() may lead to deadlocks in the child.:DeprecationWarning',
    'ignore::ResourceWarning',
    'ignore::UserWarning',
    'ignore:\Storch\S:FutureWarning',
]

# ruff config
[tool.ruff]
line-length = 80
indent-width = 4
select = ["F", "E", "W", "UP", "D"]
ignore = ["D100", "D103", "D104", "F722", 'UP038']
[tool.ruff.pydocstyle]
convention = "google"
